updated ORE tool

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,8 @@
 1. spacy
 2. rake-nltk
 3. nltk
+4. Graphene (https://github.com/Lambda-3/Graphene#requirements)
+4a. Java 8 (OpenJDK or Oracle)
+4b. Maven 3.3.9
+4c. Docker version 17.03+
+4d. docker-compose version 1.12+
